# leptonai

./: .flake8  .gitignore  .pre-commit-config.yaml  .vercelignore  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  example_usage.md  go.mod  go.sum  pyproject.toml  requirements.txt  setup.py
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
api-docs/: .gitignore  README.md  api.json  redocly.yaml
api-server/: Dockerfile  main.go
billing/: .env.local.example  .eslintrc.json  package-lock.json  package.json
butler/: README.md  docker-compose.yml
deployment-operator/: Dockerfile  Makefile  PROJECT  README.md
docs/: workflow.md
e2e-tests/: api_server_test.go  cli_photon_test.go  cli_remote_test.go  cli_secret_test.go  cli_storage_test.go  cli_workspace_test.go  cluster_info_test.go  deployment_test.go  event_test.go  imagepullsecret_test.go  ingress_test.go  instance_test.go  main_test.go  monitoring_test.go  photon_test.go  push-and-deploy.sh  readiness_test.go  replica_test.go  runtime_test.go  secret_test.go  workspace_info_test.go
github-actions-runner/: install.sh  lepton_runner_deployment.yaml  uninstall.sh
go-client/: cluster.go  deployment.go  event.go  http.go  imagepullsecret.go  instance.go  lepton.go  monitoring.go  photon.go  readiness.go  replica.go  secret.go  storage.go  workspace.go
hack/: gen.openapi.lamba-labs.sh.sh
infra-tests/: test_cluster_creation.py
install/: deployment.yaml  ingress.yaml  role.yaml  rolebinding.yaml  sa.yaml  service.yaml
lepton/: __init__.py  cli.py  config.py  db.py  registry.py  requirements.txt  util.py
lepton-api-server/: Dockerfile  deployment.go  http_deployment.go  http_instance.go  http_monitoring.go  http_photon.go  ingress_annotation.go  ingress_path.go  instance.go  k8s.go  k8s_deployment.go  k8s_ingress.go  k8s_lepton_deployment.go  k8s_photon.go  k8s_photon_test.go  k8s_service.go  main.go  photon.go  util.go  util_test.go
lepton-deployment-operator/: Dockerfile  PROJECT
lepton-mothership/: Dockerfile  README.md  main.go
leptonai/: __init__.py  cli.py  client.py  config.py  db.py  kv.py  objectstore.py  queue.py  registry.py  requirements.txt  util.py
machine/: README.md  main.go
machine-rs/: .gitignore  Cargo.toml  README.md
machine-rs/scripts/: build.release.sh  tests.lint.sh  tests.unit.sh  tests.unused.sh
machine-rs/src/: lib.rs  main.rs
machine-rs/src/aws/: artifacts.rs  command.rs  mod.rs
machine-rs/src/aws/apply/: mod.rs
machine-rs/src/aws/cfn-templates/: asg_ubuntu.yaml  ec2_instance_role.yaml  vpc.yaml
machine-rs/src/aws/default_spec/: mod.rs
machine-rs/src/aws/delete/: mod.rs
machine-rs/src/aws/pause/: mod.rs
machine-rs/src/aws/resume/: mod.rs
metrics/: metrics.go  metrics_test.go
mothership/: Dockerfile  README.md  main.go
sdk/: pyproject.toml
sdk/leptonai/: __init__.py  cli.py  client.py  config.py  db.py  registry.py  requirements.txt  util.py
sdk/leptonai/_internal/: client_utils.py  db.py  logging.py
sdk/leptonai/_internal/tests/: test_logging.py
sdk/leptonai/api/: __init__.py  deployment.py  photon.py  secret.py  storage.py  types.py  workspace.py
sdk/leptonai/bench/gpt2/: run.sh
sdk/leptonai/cli/: __init__.py  cli.py  deployment.py  in_n_out.py  photon.py  secret.py  storage.py  util.py  workspace.py
sdk/leptonai/cli/tests/: test_cli.py  test_deployment_cli.py  test_photon_cli.py  test_workspace_cli.py
sdk/leptonai/cloudrun/: __init__.py  remote.py
sdk/leptonai/cloudrun/tests/test_submodule/: foo.py
sdk/leptonai/deployment/: __init__.py  api.py  cli.py
sdk/leptonai/deployment/tests/: test_cli.py  test_deployment_cli.py
sdk/leptonai/docs/: CLI-cheatsheet.rst  cli.rst
sdk/leptonai/examples/: background_tasks.py  counter.py  deepfloyd_if.py  musicgen.py  notebook.py  requirements.txt  sd_webui.py  tts.py  ui.py  vec_db.py
sdk/leptonai/examples/clip/: clip.py
sdk/leptonai/examples/elements/: main.py
sdk/leptonai/examples/fastchat/: controller.py  docker-compose.yml  frontend.py  gradio_web_server.py  model_worker.py  openai_api_server.py  openai_demo.py
sdk/leptonai/examples/flask/: app.py  photon.py
sdk/leptonai/examples/private_docker_image/: DOCKERFILE
sdk/leptonai/examples/segment_anything/: requirements.txt  sam.py
sdk/leptonai/examples/shell/: shell.py
sdk/leptonai/photon/: __init__.py  api.py  base.py  batcher.py  cli.py  constants.py  hf.py  hf_runner.py  photon.py  runner.py  util.py
sdk/leptonai/photon/dockerfiles/: photon-py.Dockerfile  python-runner.Dockerfile  tuna-runner.Dockerfile
sdk/leptonai/photon/hf/: hf.py  hf_utils.py
sdk/leptonai/photon/tests/: test_cli.py  test_client.py  test_client_docgen.py  test_docker.py  test_photon.py  test_photon_cli.py  test_runner.py  test_sdk.py  test_types.py
sdk/leptonai/photon/types/: __init__.py  fileparam.py  pickled.py  pickled_example.py  responses.py
sdk/leptonai/remote/: cli.py  util.py
sdk/leptonai/remote/tests/: test_remote_cli.py
sdk/leptonai/secret/: cli.py
sdk/leptonai/tests/custom_image/: main.py
sdk/leptonai/tests/private_docker_image_test/: foo.py
sdk/leptonai/workspace/: cli.py  util.py
sdk/release_scripts/: e2e_sdk_cli_test.sh  timeout_test.sh
tuna/: .gitignore  manage.py  pyproject.toml  requirements.txt  vercel.json
tuna/augmentation/: README.md  augment.py  requirements.txt
tuna/dockerfiles/: docker-compose-task-queue-dashboard.yml  docker-compose-web.yml  task-queue-dashboard.Dockerfile  tuna-runner.Dockerfile  web.Dockerfile
tuna/evaluator/: Dockerfile  README.md  evaluate.py  requirements.txt  sample.json  util.py
tuna/lepton/: backend.py  controller.py  docker-compose.yml  frontend.py  ft_worker.py  model_worker.py  test_tuna.py  tuna-inference.py
tuna/scripts/: auth_gcp.sh  install_cuda.sh  install_docker.sh  prepare_worker.sh  release-fastchat.sh  run_task-queue-dashboard.sh  run_web.sh  run_worker.sh
tuna/tuna/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tuna/web/: admin.py  apps.py  models.py  tasks.py  urls.py  utils.py  views.py
tuna/web/migrations/: 0001_initial.py
(+1865 files in other folders)
